syntax = "proto3";

package github;

service GithubService {
  rpc RequestAuthorization (Empty) returns (RequestAuthSent) {}
  rpc RequestAccessToken (RequestAccessTokenParams) returns (RequestAccessTokenSent) {}
  rpc LoginWithGithub (Empty) returns (AccessToken) {}
  rpc SetTriggerNewCommitRepo (SetTriggerOnRepoParams) returns (Empty) {}
  rpc SetTriggerNewPullRequestRepo (SetTriggerOnRepoParams) returns (Empty) {}
  rpc SetTriggerNewIssueRepo (SetTriggerOnRepoParams) returns (Empty) {}
  rpc CreateIssue (CreateIssueParams) returns (Empty) {}
  rpc CreateIssueComment (CreateIssueCommentParams) returns (Empty) {}
}

message Empty {}

message RequestAuthSent {
  string url = 1;
}

message RequestAccessTokenParams {
  string code = 1;
}

message RequestAccessTokenSent {
  string accessToken = 1;
  string tokenType = 2;
}

message AccessToken {
  string accessToken = 1;
  string userId = 2;
}

message SendEmailParams {
  string recipient = 1;
  string subject = 2;
  string body = 3;
}

message SetTriggerOnRepoParams {
  string owner = 1;
  string repoName = 2;
}

message CreateIssueParams {
  string owner = 1;
  string repoName = 2;
  string title = 3;
  string body = 4;
}

message CreateIssueCommentParams {
  string owner = 1;
  string repoName = 2;
  string issueNumber = 3;
  string body = 4;
}
